# satysfi-class-coins-shinkan23-pamphlet

./: README.md  Satyristes  satysfi-class-coins-shinkan23-pamphlet-doc.opam  satysfi-class-coins-shinkan23-pamphlet.opam  satysfi-coinsshinkan23pamphlet-doc.opam  satysfi-coinsshinkan23pamphlet.opam
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
doc/: manual-common.saty  manual-common2.saty  manual-part.saty  manual-two-column.saty  manual.saty
src/: class-biol-shinkan23-pamphlet.satyh  class-coins-shinkan23-pamphlet.satyh  coinsshinkan23pamphlet.satyh  common.satyh  part.satyh  two-column.satyh
