opam-version: "2.0"
name: "satysfi-coinsshinkan23pamphlet-doc"
version: "1.0.0"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "LGPL-3.0-or-later" # Choose what you want
homepage: "https://github.com/<github-username>/satysfi-coinsshinkan23pamphlet"
dev-repo: "git+https://github.com/<github-username>/satysfi-coinsshinkan23pamphlet.git"
bug-reports: "https://github.com/<github-username>/satysfi-coinsshinkan23pamphlet/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-coinsshinkan23pamphlet" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "coinsshinkan23pamphlet-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "coinsshinkan23pamphlet-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
